--- a/patriot-dynasty-map.html
+++ b/patriot-dynasty-map.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="./patriots_style.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css'>
-<link rel='stylesheet' href='https://unpkg.com/leaflet@1.5.1/dist/leaflet.css'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Patriots Dynasty Map</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
 </head>
-
 <body>
+  <br>
+  <div id="map"></div>
 
-<br>
-<div id="map"></div>
-
-
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.5/Chart.min.js"></script>
-<script src='https://unpkg.com/leaflet@1.5.1/dist/leaflet.js'></script>
-<script  src="./patleaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.5/Chart.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+  <script src="patriots-leaflet.js"></script>
 </body>
+</html>
